samples/_failures_safe/1761351104_2f1b9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_762fc52b.c: In function ‘display_stats’:
./samples/SAFE/__tmp_762fc52b.c:143:12: error: missing terminating " character
  143 |     printf("Time range: %
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_762fc52b.c:143:5: error: expected expression at end of input
  143 |     printf("Time range: %
      |     ^~~~~~
./samples/SAFE/__tmp_762fc52b.c:143:5: error: expected declaration or statement at end of input
